tests/NormalTests/paczka1/fuzzy1/15854119.err
Error in line 1: YHffBqq A52 41,6
Error in line 2: YHffBqq A956 6,9
Error in line 3: P0X A956 47,5
Error in line 13: P0X A52 86,7
Error in line 17: P0X A716 15,8
Error in line 12: y25gQLyda A956 86,1
Error in line 34: P0X A956 95,0
